--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,20 @@ body {
 
 * {
 	box-sizing: border-box;
+    z-index: 1;
+}
+
+.background {
+    z-index: -1;
+}
+
+.background * {
+    z-index: -1;
+}
+
+.page-body {
+    flex-grow: 1;
+    overflow: hidden;
 }
 
 .orange-gradient {
