--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,11 @@
 
 html,
 body {
-	padding: 0;
-	margin: 0;
+	/* padding: 0;
+	margin: 0; */
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-	background-color: #fddcd3;
 }
 
 * {
@@ -17,13 +16,6 @@ body {
     z-index: 1;
 }
 
-.background {
-    z-index: -1;
-}
-
-.background * {
-    z-index: -1;
-}
 
 .page-body {
     flex-grow: 1;
