--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,43 +2,278 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: Belgrano;
+  src: url(./Belgrano-Regular.ttf);
+}
+
 html,
 body {
-	/* padding: 0;
+  /* padding: 0;
 	margin: 0; */
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
-	box-sizing: border-box;
-    z-index: 1;
+  box-sizing: border-box;
+  z-index: 1;
 }
 
-
 .page-body {
-    flex-grow: 1;
-    overflow: hidden;
+  flex-grow: 1;
+  overflow: hidden;
 }
 
 .orange-gradient {
-	background: rgb(255, 0, 0);
-	background: radial-gradient(
-		circle,
-		rgba(255, 0, 0, 1) 30%,
-		rgba(255, 140, 57, 1) 110%
-	);
-    border-radius: 10px;
+  background: rgb(255, 0, 0);
+  background: radial-gradient(
+    circle,
+    rgba(255, 0, 0, 1) 30%,
+    rgba(255, 140, 57, 1) 110%
+  );
+  border-radius: 10px;
 }
 .orange-gradient-text {
-	background: rgb(255, 0, 0);
-	background: radial-gradient(
-		circle,
-		rgba(255, 0, 0, 1) 0%,
-		rgba(255, 140, 57, 1) 100%
-	);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-	background-clip: text;
+  background: rgb(255, 0, 0);
+  background: radial-gradient(
+    circle,
+    rgba(255, 0, 0, 1) 0%,
+    rgba(255, 140, 57, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.white-button {
+  background: rgb(255, 255, 255);
+  border-radius: 10px;
+	color: #000;
+}
+/* Classes page */
+
+.classes-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Belgrano;
+}
+
+.inner-page {
+  background-color: #fddcd3;
+  width: 80%;
+}
+
+.base-container {
+  width: 100%;
+  height: 100%;
+  background-color: #3f3d56;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  border-radius: 30px;
+}
+
+.main-heading {
+  text-align: left;
+  color: #fddcd3;
+  font-size: 36px;
+  padding: 50px;
+  line-height: 106px;
+  letter-spacing: 3px;
+}
+.line-vector {
+  margin-bottom: -100px;
+  width: 700px;
+}
+
+.container-vector {
+  margin-left: auto;
+  margin-bottom: -60px;
+  margin-right: 20px;
+  width: 250px;
+}
+
+.item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 200px 0;
+  box-sizing: border-box;
+}
+
+.forward {
+  flex-direction: row;
+}
+
+.reverse {
+  flex-direction: row-reverse;
+}
+
+.overlap-images {
+  box-sizing: border-box;
+  width: 40%;
+  position: relative;
+}
+
+.top-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 200px;
+}
+
+.down-img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.text-data {
+  width: 40%;
+}
+
+.text-data h1 {
+  font-size: 30px;
+  margin: 10px 0;
+  font-weight: 400;
+}
+
+.page-divider {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.page-divider img {
+  height: 200px;
+  margin-bottom: -100px;
+  z-index: -1;
+}
+
+.products-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff0ec;
+  z-index: 0;
+  width: 100%;
+  padding-top: 200px;
+}
+
+.box {
+  width: 80%;
+  height: 50%;
+  margin: 50px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 40px 10px 40px 40px;
+  color: #ffffff;
+  box-shadow: 5px 10px 5px #888888;
+}
+
+.primary {
+  background-color: #222222;
+}
+
+.secondary {
+  background-color: #6362ff;
+}
+
+.warning {
+  background-color: #e54e26;
+}
+
+.box-data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.box-data h1 {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.box-data p {
+  font-size: 13px;
+}
+
+.box-img {
+  background-color: #fff0ec;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 10px;
+}
+
+@media (max-width: 768px) {
+  .inner-page {
+    width: 90%;
+  }
+
+  .base-container {
+    border-radius: 10px;
+  }
+
+  .main-heading {
+    font-size: 15px;
+    padding: 20px;
+    line-height: 20px;
+    letter-spacing: 3px;
+  }
+
+  .line-vector {
+    margin-bottom: -50px;
+    width: 300px;
+    margin-top: 10px;
+  }
+
+  .container-vector {
+    margin-left: auto;
+    margin-bottom: -40px;
+    margin-right: 20px;
+    width: 100px;
+  }
+}
+
+@media (max-width: 500px) {
+  .item {
+    flex-direction: column;
+    width: 100%;
+  }
+  .overlap-images {
+    margin-bottom: 50px;
+  }
+  .down-img {
+    max-width: 150px;
+  }
+  .top-img {
+    max-width: 200px;
+    width: 100px;
+  }
+  .text-data {
+    width: 100%;
+    margin: 50px;
+  }
+  .text-data h1 {
+    font-size: 25px;
+  }
+
+  .box {
+    flex-direction: column;
+    padding: 20px;
+  }
+  .box-img {
+    margin: 10px 0;
+  }
 }
